# C

./: .claudiaideconfig  .gitignore  1. 两数之和.c  1210. 穿过迷宫的最少移动次数.c  2331. 计算布尔二叉树的值.c  2的阶乘.c  52.数列排序  Aiden's Blog.html  CMakeLists.txt  C项目集合.sln  P1047校门外的树  P1205[USACO1.2]方块转换Transformations  P1428小鱼比可爱  P1789【Mc生存】插火把  P51.十六进制转八进制  P5729工艺品制作  README.md  c  c.c  config.json  file.txt  gcc_xz.js  hello.c  helloworld.c  helloworld.cpp  tempCodeRunnerFile.c  tempCodeRunnerFile.js  test  动态内存管理.md  移动零.c
AcWing/: C++STL.md  位运算与常用库函数.md  大数加法.cpp  学习记录.md  整数四则运算.c  最长公共前缀.c  笔记.md
AcWing/op/: 1.cpp  1.背包问题.cpp  1208.带分数.cpp  1209.带分数.cpp  143.最大异或对.cpp  154.滑动窗口.cpp  717.简单斐波那契数列.cpp  785. 快速排序.cpp  786. 第k个数.cpp  786.第k个数.cpp  787.归并排序.cpp  787.归并排序的证明与边界分析.cpp  788. 逆序对的数量.cpp  789.数的范围.cpp  790.数的三次方根.cpp  791.高精度加法.cpp  792.高精度减法.cpp  793.高精度乘法.cpp  794.高精度除法.cpp  795.前缀和cin.cpp  795.前缀和scanf.cpp  796.子矩阵的和cin.cpp  796.子矩阵的和scanf.cpp  797.差分cin.cpp  797.差分scanf.cpp  798. 差分矩阵.cpp  799.最长连续不重复子序列.cpp  800.数组元素的目标和.cpp  801.二进制中1的个数.cpp  802.区间和-迭代器.cpp  802.区间和.cpp  803.区间合并.cpp  806.两个数的和.cpp  810.绝对值.cpp  812.绝对值.cpp  813.Kmp字符串-暴力.cpp  813.Kmp字符串.cpp  826.单链表.cpp  827.双链表.cpp  828.模拟栈.cpp  (+82 more)
AcWing/op/860.染色法判定二分图.dSYM/Contents/: Info.plist
AcWing/常用代码模板/1.基础算法/: 一维前缀和.c  一维差分.c  二维前缀和.c  二维前缀和.txt  二维差分.c  位运算.c  区间合并.c  双指针算法.c  归并排序.txt  归并排序算法模板.c  快速排序.txt  快速排序算法模板.c  整数二分.c  整数二分算法模板.c  浮点数二分算法模板.c  离散化.c  离散化.txt  高精度乘低精度.c  高精度减法.c  高精度减法.txt  高精度加法.c  高精度加法.txt  高精度除以低精度.c
AcWing/常用代码模板/2.数据结构/: C++ STL简介.txt  KMP.cpp  Trie树.cpp  Trie树.txt  一般哈希.cpp  单调栈.cpp  单调队列.txt  单链表.txt  双链表.cpp  堆.txt  字符串哈希.cpp  并查集.cpp  栈.txt  队列.txt
AcWing/常用代码模板/3.搜索与图论/: Bellman-Ford算法.txt  Kruskal算法.txt  floyd算法.txt  spfa 算法（队列优化的Bellman-Ford算法）.txt  spfa判断图中是否存在负环.txt  匈牙利算法.txt  堆优化版dijkstra.txt  拓扑排序.txt  朴素dijkstra算法.txt  朴素版prim算法.txt  染色法判别二分图.txt  树与图的存储.txt  树与图的遍历.txt
AcWing/常用代码模板/4.数学知识/: Lucas定理.txt  Mex运算.txt  NIM游戏.txt  SG函数.txt  公平组合游戏ICG.txt  分解质因数法求组合数.txt  卡特兰数.txt  定理.txt  快速幂.txt  扩展欧几里得算法.txt  有向图游戏.txt  有向图游戏的和.txt  朴素筛法求素数.txt  欧几里得算法.txt  求欧拉函数.txt  筛法求欧拉函数.txt  约数个数和约数之和.txt  线性筛法求素数.txt  试除法分解质因数.txt  试除法判定质数.txt  试除法求所有约数.txt  递推法求组合数.txt  通过预处理逆元的方式求组合数.txt  高斯消元.txt
Aiden's Blog_files/: 722-5711723d1f9af10d20e1.js.下载  [page]-5e2f4fa19e9c8ca33146.js.下载  [slug]-c06a1a449d032ffd799c.js.下载  [tag]-5e7cb7e276f6d2ecfb99.js.下载  _app-d7e8d44855f4d049c0c3.js.下载  _buildManifest.js.下载  _ssgManifest.js.下载  css2  feed-73fcc340a67dc20a0065.js.下载  framework-c73ba5496de9f26a8fc9.js.下载  index-1bec9cf24ec8167ff918.js.下载  main-5e82ce73c254c9b693e6.js.下载  search-8eafa4b45c4c729ae1bd.js.下载  webpack-37f1d3b7be002450b1b3.js.下载
C#/: RFID.cpp
Lanqiao/: 10.杨辉三角形.cpp  114.铁路建设.cpp  1443.卡片.cpp  1597.语句解析.cpp  3942.日期统计.cpp  4.Fibonacci数列.cpp  497.成绩分析.cpp  498.回文日期.cpp  5.闰年判断.cpp  502.成绩统计.cpp  52.数列排序.cpp  592.门牌制作.c  592.门牌制作.cpp  597.跑步锻炼.c  6.01字串.cpp  609.最短路.cpp  P1048 [NOIP2005 普及组] 采药.cpp  P1048[NOIP2005 普及组] 采药.cpp  P1223排队接水.cpp  P1321.单词覆盖还原.cpp  P1598垂直柱状图.cpp  P1603斯诺登的密码.cpp  P1765手机.cpp  P1957口算练习题.cpp  P5733【深基6.例1】自动修正.cpp  P5735【深基7.例1】距离函数.cpp  unititled1.cpp  untitled1.cpp
LeetCode/: 1032.字符流.cpp  1129. 颜色交替的最短路径.c  1145. 二叉树着色游戏.c  151.反转字符串中的单词.cpp  167.两数之和.c  1798.你能构造出连续值的最大数目.c  1991. 找到数组的中间位置.c  2331. 计算布尔二叉树的值.c  2469.温度转换.cpp  283.移动零.c  48.旋转矩阵.c  498.对角线遍历.c  56.合并区间.c  92.递归实现指数型枚举.cpp  977.有序数组的平方.cpp  搜索插入位置.c  最长公共前缀.c  零矩阵.c
Project/: test  test.cpp  triangle.cpp
Project/2048/: 2048.c  2048.cpp  2048easyx.cpp
Project/list/: graph  graph.cpp  kruskal  kruskal.cpp  prim  prim.c  test.cpp  tree  tree.cpp  tree1  tree1.c  tree2  tree2.cpp  二叉树1.cpp  交换二叉树  交换二叉树.cpp  链表.cpp  队列.cpp  队列1.cpp  队列2.cpp  顺序表.c
Project/tetris/: day1.cpp  teris.cpp
Project1/: Project1.vcxproj  源.cpp
luogu/: P1046[NOIP2005 普及组] 陶陶摘苹果.cpp  P1047校门外的树.cpp  P1048采药.cpp  P1055[NOIP2008 普及组] ISBN 号码.cpp  P1085[NOIP2004 普及组] 不高兴的津津.cpp  P1125笨小猴.cpp  P1161开灯.cpp  P1200你的飞碟在这儿 Your Ride Is Here.cpp  P1205[USACO1.2]方块转换Transformations.cpp  P1223.排队接水.cpp  P1319压缩技术.cpp  P1320压缩技术（续集版）.cpp  P1388算式.cpp  P1422小玉家的电费.cpp  P1424小鱼的航程（改进版）.cpp  P1427小鱼的数字游戏.cpp  P1428小鱼比可爱.cpp  P1553数字反转（升级版）.cpp  P1554梦中的统计.cpp  P1598垂直柱状图.cpp  P1614爱与愁的心痛.cpp  P1765手机.cpp  P1789【Mc生存】插火把.cpp  P1888三角函数.cpp  P1909[NOIP2016 普及组] 买铅笔.cpp  P1914小书童——凯撒密码.cpp  P1957口算练习题.cpp  P2433 小学数学 N 合一.cpp  P2550彩票摇奖.cpp  P2911Bovine Bones G.cpp  P3741小果的键盘.cpp  P4414ABC.cpp  P4414[COCI2006-2007#2] ABC.cpp  P51十六进制转八进制.cpp  P5709【深基2.习6】Apples Prologue 苹果和虫子.cpp  P5710【深基3.例2】数的性质.cpp  P5711【深基3.例3】闰年判断.cpp  P5712【深基3.例4】Apples.cpp  P5713【深基3.例5】洛谷团队系统.cpp  P5714【深基3.例7】肥胖问题.cpp  (+14 more)
亲爱的你，不要以为别人发光就觉得自己暗淡。/: README.md
亲爱的你，不要以为别人发光就觉得自己暗淡。/2013 B组/: 1.高斯日记.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/2014 B组/: 1.啤酒和饮料.cpp  2.切面条.cpp  3.李白打酒.cpp  6.奇怪的分式.cpp  7.六角填数.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/2015 B组/: 1.奖券数目.cpp  2.星系炸弹.cpp  3.三羊献瑞.cpp  untitled.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/2016 B组/: 1.煤球数目.cpp  2.生日蜡烛.cpp  3.凑算式.cpp  4.快速排序.cpp  5.抽签.cpp  6.方格填数.cpp  7.剪邮票.cpp  8.四平方和.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/2017 B组/: 1.购物单.cpp  2.等差素数列.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/2018 B组/: 1.第几天.cpp  2.明码.cpp  3.乘积尾零.cpp  4.测试次数.cpp  5.快速排序.cpp  6.递增三元组.cpp  7.螺旋折线.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/2019 B组/: 1.组队.cpp  10.灵能传输.cpp  2.年号字符.cpp  3.数列求值.cpp  4.数的分解.cpp  5.迷宫.cpp  6.特别数的和.cpp  7.完全二叉树的权值.cpp  8.等差数列.cpp  9.后缀表达式.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/2020 B组/: 1.门牌制作.cpp  2.既约分数.cpp  3.蛇形填数.cpp  4.跑步锻炼.cpp  6.成绩统计.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/2023 B组/: 3.冶炼金属.cpp  4.飞机降落.cpp  5.接龙数列.cpp  6.岛屿个数.cpp  7.子串简写.cpp  8.整数删除.cpp
亲爱的你，不要以为别人发光就觉得自己暗淡。/STL/: 1.sort.cpp  3.merge.cpp  4.accumlate.cpp  5.next_permutation.cpp
新特性/C++11新特性学习/: C++11讲义.doc  C++11讲义.docx  课程安排.txt
新特性/C++11新特性学习/第01天/1-教学资料/: 课堂记录.cpp
新特性/C++11新特性学习/第01天/4-源代码/: 01_auto的使用.cpp  02_auto易错点.cpp  03_decltype的使用.cpp  04_追踪返回类型.cpp  05_类中成员变量初始化.cpp  06_列表初始化.cpp  07_C中的类型收窄.c  08_列表初始化防止类型收窄.cpp  09_基于范围的for循环.cpp  10_静态断言.cpp  11_noexcept修饰符.cpp  12_nullptr.cpp  13_强类型枚举.cpp  14_constexpr.cpp  15_constexpr_err.cpp  16_constexpr_class.cpp  17_custom_literal.cpp  (+17 more)
(+21 files in other folders)
