cmake_minimum_required(VERSION 3.25)
project(C)

set(CMAKE_CXX_STANDARD 14)

add_executable(C
        AcWing/op/1.背包问题.cpp
        AcWing/op/116.飞行员兄弟.cpp
        AcWing/op/1208.带分数.cpp
        AcWing/op/1209.带分数.cpp
        AcWing/op/143.最大异或对.cpp
        AcWing/op/154.滑动窗口.cpp
        AcWing/op/240.食物链.cpp
        AcWing/op/717.简单斐波那契数列.cpp
        AcWing/op/785.快速排序.cpp
        AcWing/op/786.第k个数.cpp
        AcWing/op/787.归并排序.cpp
        "AcWing/op/788. 逆序对的数量.cpp"
        AcWing/op/788.逆序对的数量.c
        AcWing/op/789.数的范围.cpp
        AcWing/op/790.数的三次方根.cpp
        AcWing/op/791.高精度加法.cpp
        AcWing/op/792.高精度减法.cpp
        AcWing/op/793.高精度乘法.cpp
        AcWing/op/794.高精度除法.cpp
        AcWing/op/795.前缀和cin.cpp
        AcWing/op/795.前缀和scanf.cpp
        AcWing/op/796.子矩阵的和cin.cpp
        AcWing/op/796.子矩阵的和scanf.cpp
        AcWing/op/797.差分cin.cpp
        AcWing/op/797.差分scanf.cpp
        "AcWing/op/798. 差分矩阵.cpp"
        AcWing/op/799.最长连续不重复子序列.cpp
        AcWing/op/800.数组元素的目标和.cpp
        AcWing/op/801.二进制中1的个数.cpp
        AcWing/op/802.区间和-迭代器.cpp
        AcWing/op/802.区间和.cpp
        AcWing/op/803.区间合并.cpp
        AcWing/op/806.两个数的和.cpp
        AcWing/op/810.绝对值.cpp
        AcWing/op/812.绝对值.cpp
        AcWing/op/813.Kmp字符串-暴力.cpp
        AcWing/op/813.Kmp字符串.cpp
        AcWing/op/826.单链表.cpp
        AcWing/op/827.双链表.cpp
        AcWing/op/828.模拟栈.cpp
        AcWing/op/829.模拟队列.cpp
        AcWing/op/830.单调栈.cpp
        AcWing/op/835.Tire字符串统计.cpp
        AcWing/op/836.合并集合-优化.cpp
        AcWing/op/836.合并集合.cpp
        AcWing/op/837.连通块中点的数量.cpp
        AcWing/op/838.堆排序.cpp
        AcWing/op/839.模拟堆.cpp
        AcWing/op/840.模拟散列表-开放寻址.cpp
        AcWing/op/840.模拟散列表-拉链.cpp
        AcWing/op/841.字符串哈希.cpp
        AcWing/op/842.排列数字.cpp
        AcWing/op/843.n-皇后问题-排列-格.cpp
        AcWing/op/843.n-皇后问题-排列-行.cpp
        AcWing/op/844.走迷宫.cpp
        AcWing/op/845.八数码.cpp
        AcWing/op/846.树的重心.cpp
        AcWing/op/847.图中点的层次.cpp
        AcWing/op/848.有向图的拓扑排序（序列）.cpp
        AcWing/op/849.Dijkstra求最短路-邻接矩阵.cpp
        AcWing/op/849.Dijkstra求最短路I-邻接表.cpp
        AcWing/op/850.Dijkstra求最短路II-邻接矩阵.cpp
        AcWing/op/850.Dijkstra求最短路II-邻接表.cpp
        AcWing/op/851.spfa求最短路.cpp
        AcWing/op/852.spfa判断负环.cpp
        AcWing/op/853.有边数限制的最短路.cpp
        AcWing/op/854.Floyd求最短路.cpp
        AcWing/op/858.Prim算法求最小生成树.cpp
        AcWing/op/859.Kruskal算法求最小生成树.cpp
        AcWing/op/860.染色法判定二分图-BFS.cpp
        AcWing/op/860.染色法判定二分图-DFS.cpp
        AcWing/op/861.二分图的最大匹配.cpp
        AcWing/op/866.试除法判定质数.cpp
        AcWing/op/867.分解质因数.cpp
        AcWing/op/868.筛质数.cpp
        AcWing/op/870.约数个数.cpp
        AcWing/op/872.最大公约数.cpp
        AcWing/op/879.扩展欧几里得算法.cpp
        AcWing/op/92.递归实现指数型枚举-vector.cpp
        AcWing/op/92.递归实现指数型枚举-存.cpp
        AcWing/op/92.递归实现指数型枚举.cpp
        AcWing/op/93.递归实现组合型枚举.cpp
        AcWing/op/94.递归实现排列型枚举.cpp
        AcWing/op/95.费解的开关.cpp
        AcWing/op/C++STL-pair.cpp
        AcWing/op/C++STL-priority_queue.cpp
        AcWing/op/C++STL-queue.cpp
        AcWing/op/C++STL-set.cpp
        AcWing/op/C++STL-stack.cpp
        AcWing/op/C++STL-string.cpp
        AcWing/op/C++STL-vector.cpp
        AcWing/op/C++STL-概览.cpp
        AcWing/op/helloworld.c
        "AcWing/op/L1-1 嫑废话上代码.c"
        "AcWing/op/L1-2 九牛一毛.c"
        "AcWing/op/L1-3 小孩子才做选择，大人全都要.c"
        "AcWing/op/L1-4 拯救外星人.c"
        "AcWing/op/L1-5 试试手气.c"
        "AcWing/op/L1-6 打PTA.c"
        "AcWing/op/L3-3 教科书般的亵渎.cpp"
        AcWing/op/teris.cpp
        AcWing/op/untitled1.cpp
        AcWing/op/位运算-二进制表示.cpp
        AcWing/op/双指针-输出单个字符.cpp
        AcWing/op/对拍.c
        AcWing/op/浮点数二分.cpp
        AcWing/cs.cpp
        "C#/RFID.cpp"
        Lanqiao/114.铁路建设.cpp
        Lanqiao/1443.卡片.cpp
        Lanqiao/497.成绩分析.cpp
        Lanqiao/498.回文日期.cpp
        Lanqiao/502.成绩统计.cpp
        Lanqiao/592.门牌制作.c
        Lanqiao/592.门牌制作.cpp
        Lanqiao/597.跑步锻炼.c
        Lanqiao/609.最短路.cpp
        Lanqiao/unititled1.cpp
        Lanqiao/untitled1.cpp
        "LeetCode/1. 两数之和.c"
        LeetCode/1032.字符流.cpp
        "LeetCode/1129. 颜色交替的最短路径.c"
        "LeetCode/1145. 二叉树着色游戏.c"
        "LeetCode/1210. 穿过迷宫的最少移动次数.c"
        LeetCode/167.两数之和.c
        LeetCode/1798.你能构造出连续值的最大数目.c
        "LeetCode/2331. 计算布尔二叉树的值.c"
        LeetCode/2469.温度转换.cpp
        LeetCode/283.移动零.c
        LeetCode/977.有序数组的平方.cpp
        Project/2048/2048.c
        Project/2048/2048.cpp
        Project/2048/2048easyx.cpp
        Project/list/graph.cpp
        Project/list/kruskal.cpp
        Project/list/prim.c
        Project/list/test.cpp
        Project/list/tree.cpp
        Project/list/tree1.c
        Project/list/tree2.cpp
        Project/list/二叉树1.cpp
        Project/list/交换二叉树.cpp
        Project/list/链表.cpp
        Project/list/队列.cpp
        Project/list/队列1.cpp
        Project/list/队列2.cpp
        Project/tetris/day1.cpp
        Project/tetris/teris.cpp
        Project/test.cpp
        新特性/C++11新特性学习/第01天/1-教学资料/课堂记录.cpp
        新特性/C++11新特性学习/第01天/4-源代码/01_auto的使用.cpp
        新特性/C++11新特性学习/第01天/4-源代码/02_auto易错点.cpp
        新特性/C++11新特性学习/第01天/4-源代码/03_decltype的使用.cpp
        新特性/C++11新特性学习/第01天/4-源代码/04_追踪返回类型.cpp
        新特性/C++11新特性学习/第01天/4-源代码/05_类中成员变量初始化.cpp
        新特性/C++11新特性学习/第01天/4-源代码/06_列表初始化.cpp
        新特性/C++11新特性学习/第01天/4-源代码/07_C中的类型收窄.c
        新特性/C++11新特性学习/第01天/4-源代码/08_列表初始化防止类型收窄.cpp
        新特性/C++11新特性学习/第01天/4-源代码/09_基于范围的for循环.cpp
        新特性/C++11新特性学习/第01天/4-源代码/10_静态断言.cpp
        新特性/C++11新特性学习/第01天/4-源代码/11_noexcept修饰符.cpp
        新特性/C++11新特性学习/第01天/4-源代码/12_nullptr.cpp
        新特性/C++11新特性学习/第01天/4-源代码/13_强类型枚举.cpp
        新特性/C++11新特性学习/第01天/4-源代码/14_constexpr.cpp
        新特性/C++11新特性学习/第01天/4-源代码/15_constexpr_err.cpp
        新特性/C++11新特性学习/第01天/4-源代码/16_constexpr_class.cpp
        新特性/C++11新特性学习/第01天/4-源代码/17_custom_literal.cpp
        新特性/C++11新特性学习/第01天/4-源代码/18_custom_literal2.cpp
        新特性/C++11新特性学习/第01天/4-源代码/19_原生字符串字面值.cpp
        新特性/C++11新特性学习/第01天/4-源代码/20_inherit_constructor.cpp
        新特性/C++11新特性学习/第01天/4-源代码/21_delegate_constructor.cpp
        新特性/C++11新特性学习/第01天/4-源代码/22_final.cpp
        新特性/C++11新特性学习/第01天/4-源代码/23_override.cpp
        新特性/C++11新特性学习/第01天/4-源代码/24_default.cpp
        新特性/C++11新特性学习/第01天/4-源代码/25_delete.cpp
        新特性/C++11新特性学习/第01天/4-源代码/26_gt.cpp
        新特性/C++11新特性学习/第01天/4-源代码/27_alias.cpp
        新特性/C++11新特性学习/第01天/4-源代码/28_template_args.cpp
        新特性/C++11新特性学习/第01天/4-源代码/29_variable_args.cpp
        新特性/C++11新特性学习/第01天/4-源代码/30_vargs_num.cpp
        新特性/C++11新特性学习/第01天/4-源代码/31_variable_args2.cpp
        新特性/C++11新特性学习/第01天/4-源代码/32_variable_args3.cpp
        新特性/C++11新特性学习/第01天/4-源代码/33_variable_args4.cpp
        新特性/C++11新特性学习/第01天/4-源代码/34_variable_args5.cpp
        新特性/C++11新特性学习/第02天/4-源代码/01_left_right_value.cpp
        新特性/C++11新特性学习/第02天/4-源代码/02_my_string.cpp
        新特性/C++11新特性学习/第02天/4-源代码/03_move_constructor.cpp
        新特性/C++11新特性学习/第02天/4-源代码/04_move_assign.cpp
        新特性/C++11新特性学习/第02天/4-源代码/05_move.cpp
        新特性/C++11新特性学习/第02天/4-源代码/06_forward1.cpp
        新特性/C++11新特性学习/第02天/4-源代码/07_forward2.cpp
        新特性/C++11新特性学习/第02天/4-源代码/08_unique_ptr.cpp
        新特性/C++11新特性学习/第02天/4-源代码/09_shared_ptr.cpp
        新特性/C++11新特性学习/第02天/4-源代码/10_weak_ptr.cpp
        新特性/C++11新特性学习/第02天/4-源代码/11_functor.cpp
        新特性/C++11新特性学习/第02天/4-源代码/12_function.cpp
        新特性/C++11新特性学习/第02天/4-源代码/13_bind.cpp
        新特性/C++11新特性学习/第02天/4-源代码/14_bind_function.cpp
        新特性/C++11新特性学习/第02天/4-源代码/15_lambda1.cpp
        新特性/C++11新特性学习/第02天/4-源代码/16_lambda2.cpp
        新特性/C++11新特性学习/第02天/4-源代码/17_lambda_functor.cpp
        新特性/C++11新特性学习/第02天/4-源代码/18_lambda_type.cpp
        新特性/C++11新特性学习/第02天/4-源代码/19_lambda3.cpp
        2的阶乘.c
        c.c
        hello.c
        helloworld.c
        helloworld.cpp
        tempCodeRunnerFile.c
        整数四则运算.c
        移动零.c AcWing/op/877.扩展欧几里得算法.cpp AcWing/op/878.线性同余方程.cpp AcWing/op/885.高斯消元解线性方程.cpp AcWing/op/887.求组合数3.cpp luogu/P1428小鱼比可爱.cpp luogu/P1427小鱼的数字游戏.cpp)
